# M2G

./: .gitignore  CMakeLists.txt
include/cairo/: cairo-features.h
java-m2g/: JNI_OnLoad.cpp  JNI_OnLoad.h  java-Font.cpp  java-Graphics.cpp  java-Image.cpp  java-ImageCodec.cpp  java-Objects.cpp  java-Objects.h  jni_def.h
java-m2g-cairo/: java-Font.cpp  java-Graphics.cpp  java-Image.cpp  java-ImageCodec.cpp  java-Objects.h  jni_def.h
java-m2g-ext/: JNI_OnLoad.cpp  JNI_OnLoad.h  M2G_OnLoad.cpp  M2G_OnLoad.h  java-Objects.cpp  java-Typeface.cpp  jni_def.h
jni/jvm/: jni_md.h
m2g/: Clip.cpp  Clip.h  Font.cpp  Font.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  ImageCodec.cpp  ImageCodec.h  Line.cpp  Line.h  PixelBuffer.cpp  PixelBuffer.h  PixelFormat.cpp  PixelFormat.h  Point.cpp  Point.h  Rect.cpp  Rect.h  Typeface.cpp  Typeface.h  UTF8Iterator.h  blit.h  color.h  draw.h  draw_image.h  draw_text.h  m2g-def.h  m2g.h  strConver.cpp  strConver.h
m2g-cairo/: Font.cpp  Font.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  ImageCodec.cpp  ImageCodec.h  Typeface.cpp  Typeface.h  m2g.h
m2g/draw/: blend.h  blend_c.h  blend_neon.h  blit.h  convert.h  copy.h  draw.h  draw_image.h  draw_text.h  pix_def.h  run.h
shared/: ImageFormat.cpp  ImageFormat.h  PixelBuffer.cpp  PixelBuffer.h  Point.cpp  Point.h  STB_Decoder.cpp  STB_Decoder.h  m2g-def.h  pixel.h  utf.cpp  utf.h
stb/: CMakeLists.txt  stb_image.c  stblib.c
